2004-08-10  Alvaro del Castillo  <acs@barrapunto.com>
	
	* src/planner-eds-plugin.c: 
	Fixed castings and some little style issues

2004-08-10  Alvaro del Castillo  <acs@barrapunto.com>

	* configure.in
	* src/Makefile.am:
	Added support for enable evolution data server (eds) plugin
	* data/glade/Makefile.am:
	* data/glade/eds.glade (added):
	GUI for the evolution data server (eds) plugin
	* data/ui/Makefile.am:
	* data/ui/main-window.ui
	* data/ui/eds-plugin.ui (added)
	* src/planner-window.c:
	New Import menu and new entry in Import for eds plugin
	* src/planner-eds-plugin.c (added):
	eds plugin implementation
	
2004-08-09  Richard Hult  <richard@imendio.com>

	* libegg/recent-files/: Sync (even though we're not using this at
	the moment).

2004-08-09  Richard Hult  <richard@imendio.com>

	* libplanner/Makefile.am: Remove mrp-intl.h
	* libplanner/*.c: Change mrp-intl.h to glib/gi18n.h.
	* src/*.c: Change libgnome/gnome-i18n.h to glib/gi18n.h.

2004-08-09  Richard Hult  <richard@imendio.com>

	* configure.in:
	* libplanner/mrp-file-module.c: (mrp_file_module_load_all),
	(mrp_file_reader_read_string):
	* libplanner/mrp-file-module.h:
	* libplanner/mrp-mpx.c: (init):
	* libplanner/mrp-project.c: (mrp_project_load):
	* libplanner/mrp-xml.c: (init): Remove gsf usage since we didn't
	really use it for anything but opening an XML file and returning a
	doc pointer.

	* libplanner/mrp-error.h: Include glib.h.

2004-08-09  Mikael Hallendal  <micke@imendio.com>

	* src/planner-sql-plugin.c: Update to new PlannerConf api.

2004-08-09  Mikael Hallendal  <micke@imendio.com>

	* src/Makefile.am: Added planner-conf.h and planner-conf-gconf.c
	* src/planner-conf-gconf.c: Added
	* src/planner-conf.h: Added
	* src/planner-application.[ch]:
	* src/planner-gantt-chart.c:
	* src/planner-print-dialog.c:
	* src/planner-sql-plugin.c:
	* src/planner-task-view.c: 
	* src/planner-window.c: 
	* src/planner-xml-planner-plugin.c:
	- Added GConf abstraction layer.