@@ -1,3 +1,8 @@
+2004-08-11  Alvaro del Castillo  <acs@barrapunto.com>
+	
+	* src/planner-eds-plugin.c:
+	Store the e-d-s UID as a custom property in resources.
+	
 2004-08-10  Alvaro del Castillo  <acs@barrapunto.com>
 	
 	* src/planner-eds-plugin.c: 
